--- a/website/package.json
+++ b/website/package.json
@@ -6,8 +6,8 @@
     "test": "npx jest --watch"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.17",
-    "@docusaurus/plugin-ideal-image": "2.0.0-beta.17",
+    "@docusaurus/core": "^2.0.0-beta.21",
+    "@docusaurus/plugin-ideal-image": "^2.0.0-beta.21",
     "@docusaurus/preset-classic": "2.0.0-beta.17",
     "@docusaurus/theme-search-algolia": "2.0.0-beta.17",
     "@mdx-js/react": "^1.6.21",
