Fix Natty's image

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -229,7 +229,7 @@ jonathan_natkins:
   name: (Natty) Jon Natkins
   job_title: Regional Director of Solutions Architecture - Enterprise West
   organization: dbt Labs
-  #image_url: /img/blog/authors/matt-winkler.jpeg
+  image_url: /img/blog/authors/jonathan-natkins.jpeg
   links:
     - url: https://www.linkedin.com/in/nattyice/
 
