fixes and updates

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -274,7 +274,7 @@ callum_mccann:
   job_title: Senior Developer Experience Advocate
   organization: dbt Labs
   description: Callum works on metrics and is either talking about that or obsessing about his dog. 
-  image_url: /img/blog/authors/callum_mccann.jpeg
+  image_url: /img/blog/authors/callum-mccann.jpg
   links:
     - url: https://www.linkedin.com/in/callum-mccann-38628a89/
       icon: fa-linkedin
