add article and update my title

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -97,7 +97,7 @@ claire_carroll:
 
 dave_connors:
   name: Dave Connors
-  job_title: Analytics Engineer
+  job_title: Senior Analytics Engineer
   organization: dbt Labs
   image_url: /img/blog/authors/dconnors.jpeg
   links:
