--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -311,3 +311,14 @@ barr_yaron:
   links:
     - url: https://www.linkedin.com/in/barryaron/
       icon: fa-linkedin
+      
+ian_fahey:
+  name: Ian Fahey
+  job_title: Analytics Engineer
+  organization: dbt Labs
+  image_url: /img/blog/authors/ian-fahey.png
+  links:
+    - url: https://www.linkedin.com/in/ianmfahey/
+      icon: fa-linkedin
+    - url: https://twitter.com/Cavorax
+      icon: fa-twitter
