--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -334,3 +334,24 @@ joe-markiewicz:
       icon: fa-linkedin
     - url: https://twitter.com/JoeMarkiewicz17
       icon: fa-twitter
+
+yu_ishikawa:
+  name: Yu Ishikawa
+  job_title: Senior Data Privacy Engineer
+  organization: Ubie
+  image_url: /img/blog/authors/yu-ishikawa.jpg
+  links:
+    - url: https://www.linkedin.com/in/yuishikawa0301
+      icon: fa-linkedin
+
+joe-markiewicz:
+  name: Joe Markiewicz
+  job_title: Analytics Engineering Manager (Fivetran dbt package maintainer)
+  description: Joe is a dbt package maintainer/manager at Fivetran by day, and a cat obsessed video game developer by night. Actually, Joe is cat obsessed all day.
+  organization: Fivetran
+  image_url: /img/blog/authors/joe-markiewicz.png
+  links:
+    - url: https://www.linkedin.com/in/joseph-markiewicz-8224a990/
+      icon: fa-linkedin
+    - url: https://twitter.com/JoeMarkiewicz17
+      icon: fa-twitter
