Fix URL slug, fix image syntax, add image file folder

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -328,7 +328,7 @@ joe_markiewicz:
   job_title: Analytics Engineering Manager (Fivetran dbt package maintainer)
   description: Joe is a dbt package maintainer/manager at Fivetran by day, and a cat obsessed video game developer by night. Actually, Joe is cat obsessed all day.
   organization: Fivetran
-  image_url: /img/blog/authors/joe-markiewicz.png
+  image_url: /img/blog/authors/joe-markiewicz.jpeg
   links:
     - url: https://www.linkedin.com/in/joseph-markiewicz-8224a990/
       icon: fa-linkedin
