--- a/website/package.json
+++ b/website/package.json
@@ -11,8 +11,9 @@
     "@docusaurus/preset-classic": "2.0.0-beta.17",
     "@docusaurus/theme-search-algolia": "2.0.0-beta.17",
     "@mdx-js/react": "^1.6.21",
-    "axios": "^0.27.2",
     "@svgr/webpack": "^6.0.0",
+    "algoliasearch": "^4.14.2",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "color": "^3.1.2",
@@ -62,7 +63,9 @@
     "setupFilesAfterEnv": [
       "<rootDir>/jest.setup.js"
     ],
-    "moduleNameMapper": { "\\.css$": "<rootDir>/static/css/__mocks__/styleMock.js" }
+    "moduleNameMapper": {
+      "\\.css$": "<rootDir>/static/css/__mocks__/styleMock.js"
+    }
   },
   "version": "0.0.0"
 }
