--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.17",
     "@docusaurus/theme-search-algolia": "2.0.0-beta.17",
     "@mdx-js/react": "^1.6.21",
+    "@netlify/functions": "^1.3.0",
     "@svgr/webpack": "^6.0.0",
     "algoliasearch": "^4.14.2",
     "axios": "^0.27.2",
