--- a/website/package.json
+++ b/website/package.json
@@ -62,7 +62,9 @@
     "setupFilesAfterEnv": [
       "<rootDir>/jest.setup.js"
     ],
-    "moduleNameMapper": { "\\.css$": "<rootDir>/static/css/__mocks__/styleMock.js" }
+    "moduleNameMapper": {
+      "\\.css$": "<rootDir>/static/css/__mocks__/styleMock.js"
+    }
   },
   "version": "0.0.0"
 }
