--- a/website/package.json
+++ b/website/package.json
@@ -25,6 +25,7 @@
     "js-yaml": "^4.1.0",
     "mobx": "^6.3.9",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "papaparse": "^5.3.2",
     "prism-react-renderer": "^1.2.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
