--- a/website/blog/metadata.yml
+++ b/website/blog/metadata.yml
@@ -2,7 +2,7 @@
 featured_image: ""
 
 # This CTA lives in right sidebar on blog index
-featured_cta: "setup"
+featured_cta: "staging"
 
 # Show or hide hero title, description, cta from blog index
 show_title: true
